--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Счетчик подписчиков YouTube</title>
+    <title>somr сайт</title>
+    <link rel="icon" type="image/png" href="/favicon.png">
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -356,15 +358,244 @@
             height: 24px;
             fill: white;
         }
+
+        .chat-container {
+            display: flex;
+            flex-direction: column;
+            height: 400px;
+            border: 1px solid #ccc;
+            border-radius: 10px;
+            overflow: hidden;
+        }
+
+        .chat-messages {
+            flex: 1;
+            overflow-y: auto;
+            padding: 10px;
+            background: #f9f9f9;
+        }
+
+        .dark-theme .chat-messages {
+            background: #2a2a2a;
+        }
+
+        .retro-theme .chat-messages {
+            background: #d0d0a0;
+            border: 2px solid #000;
+        }
+
+        .message {
+            margin: 10px;
+            padding: 10px;
+            border-radius: 10px;
+            max-width: 70%;
+            word-wrap: break-word;
+        }
+
+        .message.sent {
+            background: #ff4d4d;
+            color: white;
+            margin-left: auto;
+        }
+
+        .dark-theme .message.sent {
+            background: #4ecdc4;
+        }
+
+        .retro-theme .message.sent {
+            background: #ff0000;
+            border: 2px solid #000;
+        }
+
+        .message.received {
+            background: #e0e0e0;
+            color: #333;
+            margin-right: auto;
+        }
+
+        .dark-theme .message.received {
+            background: #444;
+            color: #f5f5f5;
+        }
+
+        .retro-theme .message.received {
+            background: #f0f0d8;
+            color: #2e2e2e;
+            border: 2px solid #000;
+        }
+
+        .message .sender {
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
+
+        .chat-input-container {
+            display: flex;
+            padding: 10px;
+            background: #fff;
+        }
+
+        .dark-theme .chat-input-container {
+            background: #333;
+        }
+
+        .retro-theme .chat-input-container {
+            background: #d0d0a0;
+            border-top: 2px solid #000;
+        }
+
+        .chat-input {
+            flex: 1;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 1em;
+        }
+
+        .dark-theme .chat-input {
+            background: #444;
+            color: #f5f5f5;
+            border-color: #555;
+        }
+
+        .retro-theme .chat-input {
+            background: #f0f0d8;
+            color: #2e2e2e;
+            border: 2px solid #000;
+            font-family: 'Courier New', Courier, monospace;
+        }
+
+        .chat-input:focus {
+            outline: none;
+            border-color: #ff4d4d;
+        }
+
+        .chat-send-button {
+            background: #ff4d4d;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+            margin-left: 10px;
+            transition: background 0.3s, transform 0.2s;
+        }
+
+        .dark-theme .chat-send-button {
+            background: #4ecdc4;
+        }
+
+        .retro-theme .chat-send-button {
+            background: #ff0000;
+            border: 2px solid #000;
+            font-family: 'Courier New', Courier, monospace;
+        }
+
+        .chat-send-button:hover {
+            background: #e63939;
+            transform: scale(1.05);
+        }
+
+        .dark-theme .chat-send-button:hover {
+            background: #3db8b0;
+        }
+
+        .retro-theme .chat-send-button:hover {
+            background: #cc0000;
+        }
+
+        .code-entry-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-bottom: 20px;
+        }
+
+        .code-input, .nickname-input {
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 1em;
+            width: 200px;
+            margin-bottom: 10px;
+        }
+
+        .dark-theme .code-input, .dark-theme .nickname-input {
+            background: #444;
+            color: #f5f5f5;
+            border-color: #555;
+        }
+
+        .retro-theme .code-input, .retro-theme .nickname-input {
+            background: #f0f0d8;
+            color: #2e2e2e;
+            border: 2px solid #000;
+            font-family: 'Courier New', Courier, monospace;
+        }
+
+        .code-input:focus, .nickname-input:focus {
+            outline: none;
+            border-color: #ff4d4d;
+        }
+
+        .code-submit-button, .google-signin-button {
+            background: #ff4d4d;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background 0.3s, transform 0.2s;
+            margin: 5px;
+        }
+
+        .dark-theme .code-submit-button, .dark-theme .google-signin-button {
+            background: #4ecdc4;
+        }
+
+        .retro-theme .code-submit-button, .retro-theme .google-signin-button {
+            background: #ff0000;
+            border: 2px solid #000;
+            font-family: 'Courier New', Courier, monospace;
+        }
+
+        .code-submit-button:hover, .google-signin-button:hover {
+            background: #e63939;
+            transform: scale(1.05);
+        }
+
+        .dark-theme .code-submit-button:hover, .dark-theme .google-signin-button:hover {
+            background: #3db8b0;
+        }
+
+        .retro-theme .code-submit-button:hover, .retro-theme .google-signin-button:hover {
+            background: #cc0000;
+        }
+
+        .code-error {
+            color: #ff4d4d;
+            font-size: 0.9em;
+            margin-top: 10px;
+        }
+
+        .dark-theme .code-error {
+            color: #4ecdc4;
+        }
+
+        .retro-theme .code-error {
+            color: #ff0000;
+            font-family: 'Courier New', Courier, monospace;
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Живой счетчик подписчиков YouTube</h1>
+        <h1>Живой счетчик подписчиков YouTube и Чат</h1>
         <div class="tabs">
             <div class="tab active" onclick="showTab('counter')">Счетчик</div>
             <div class="tab" onclick="showTab('popular')">Популярные видео Арсен</div>
             <div class="tab" onclick="showTab('jokes')">Анекдоты</div>
+            <div class="tab" onclick="showTab('chat')">Чат</div>
         </div>
         <div class="tab-content active" id="counter">
             <div class="widget">
@@ -393,6 +624,26 @@
         <div class="tab-content" id="jokes">
             <div class="joke" id="joke"></div>
             <button class="joke-button" onclick="generateJoke()">Сгенерировать анекдот</button>
+        </div>
+        <div class="tab-content" id="chat">
+            <div id="codeEntry" class="code-entry-container">
+                <input type="text" class="code-input" id="codeInput" placeholder="Введите код (например, 123456)">
+                <input type="text" class="nickname-input" id="nicknameInput" placeholder="Введите ник (1-20 символов)">
+                <div style="display: flex; justify-content: center;">
+                    <button class="code-submit-button" onclick="submitCode()">Подключиться</button>
+                    <div id="googleSignIn"></div>
+                </div>
+                <div class="code-error" id="codeError"></div>
+            </div>
+            <div id="chatContainer" class="chat-container" style="display: none;">
+                <div class="chat-messages" id="chatMessages">
+                    <!-- Messages will be appended here -->
+                </div>
+                <div class="chat-input-container">
+                    <input type="text" class="chat-input" id="chatInput" placeholder="Введите сообщение...">
+                    <button class="chat-send-button" onclick="sendMessage()">Отправить</button>
+                </div>
+            </div>
         </div>
         <div class="theme-selector">
             <label for="theme">Выберите тему:</label>
@@ -424,6 +675,8 @@
                 const iframe = document.getElementById('arsenCounter');
                 const baseSrc = 'https://socialcounts.org/youtube-live-subscriber-count/UCuOuEsj6-EiykBf4PtSWtdQ/embed';
                 iframe.src = baseSrc + '?t=' + new Date().getTime();
+            } else if (tabId === 'chat') {
+                scrollToBottom();
             }
         }
 
@@ -461,7 +714,150 @@
             jokeElement.textContent = jokes[randomIndex];
         }
 
-        // Generate a joke on page load
+        // Chat functionality
+        const validCode = "123456"; // Predefined code for demo
+        let isChatUnlocked = false;
+        let currentUser = null; // Will be set to nickname or Google name
+        let chatCode = null;
+        let lastMessageCount = 0; // Track message count for polling
+        let pollInterval = null; // Store polling interval
+
+        // Initialize Google Sign-In
+        window.onload = function() {
+            google.accounts.id.initialize({
+                client_id: 'YOUR_GOOGLE_CLIENT_ID', // Replace with your Google Client ID
+                callback: handleGoogleSignIn
+            });
+            google.accounts.id.renderButton(
+                document.getElementById('googleSignIn'),
+                { theme: 'outline', size: 'large', text: 'signin_with' }
+            );
+        };
+
+        function handleGoogleSignIn(response) {
+            const profile = JSON.parse(atob(response.credential.split('.')[1]));
+            const nickname = profile.name || 'Google User';
+            const codeInput = document.getElementById('codeInput').value.trim();
+            if (codeInput !== validCode) {
+                document.getElementById('codeError').textContent = "Неверный код. Попробуйте снова.";
+                return;
+            }
+            joinChat(codeInput, nickname);
+        }
+
+        function joinChat(code, nickname) {
+            isChatUnlocked = true;
+            chatCode = code;
+            currentUser = nickname;
+            document.getElementById('codeEntry').style.display = 'none';
+            document.getElementById('chatContainer').style.display = 'flex';
+            const messages = getMessages();
+            if (messages.length === 0) {
+                messages.push({ text: `Добро пожаловать в чат с кодом ${chatCode}!`, sender: 'received', user: 'System' });
+                saveMessages(messages);
+            }
+            lastMessageCount = messages.length;
+            renderMessages();
+            startPolling();
+        }
+
+        // Initialize chat messages from localStorage or start empty
+        function getMessages() {
+            const stored = localStorage.getItem(`chat_${chatCode}`);
+            return stored ? JSON.parse(stored) : [];
+        }
+
+        function saveMessages(messages) {
+            localStorage.setItem(`chat_${chatCode}`, JSON.stringify(messages));
+        }
+
+        function submitCode() {
+            const codeInput = document.getElementById('codeInput').value.trim();
+            const nicknameInput = document.getElementById('nicknameInput').value.trim();
+            const codeError = document.getElementById('codeError');
+            if (codeInput !== validCode) {
+                codeError.textContent = "Неверный код. Попробуйте снова.";
+                return;
+            }
+            if (!nicknameInput || nicknameInput.length < 1 || nicknameInput.length > 20) {
+                codeError.textContent = "Ник должен быть от 1 до 20 символов.";
+                return;
+            }
+            joinChat(codeInput, nicknameInput);
+        }
+
+        function renderMessages() {
+            const chatMessages = document.getElementById('chatMessages');
+            chatMessages.innerHTML = '';
+            const messages = getMessages();
+            messages.forEach(message => {
+                const messageElement = document.createElement('div');
+                messageElement.classList.add('message', message.user === currentUser ? 'sent' : 'received');
+                const senderElement = document.createElement('div');
+                senderElement.classList.add('sender');
+                senderElement.textContent = message.user;
+                messageElement.appendChild(senderElement);
+                const textElement = document.createElement('div');
+                textElement.textContent = message.text;
+                messageElement.appendChild(textElement);
+                chatMessages.appendChild(messageElement);
+            });
+            scrollToBottom();
+        }
+
+        function sendMessage() {
+            if (!isChatUnlocked) return;
+            const chatInput = document.getElementById('chatInput');
+            const text = chatInput.value.trim();
+            if (text) {
+                const messages = getMessages();
+                messages.push({ text, sender: 'sent', user: currentUser });
+                saveMessages(messages);
+                lastMessageCount = messages.length;
+                chatInput.value = '';
+                renderMessages();
+            }
+        }
+
+        function startPolling() {
+            if (pollInterval) clearInterval(pollInterval);
+            pollInterval = setInterval(() => {
+                if (isChatUnlocked && document.getElementById('chat').classList.contains('active')) {
+                    const messages = getMessages();
+                    if (messages.length !== lastMessageCount) {
+                        lastMessageCount = messages.length;
+                        renderMessages();
+                    }
+                }
+            }, 1000);
+        }
+
+        function scrollToBottom() {
+            const chatMessages = document.getElementById('chatMessages');
+            chatMessages.scrollTop = chatMessages.scrollHeight;
+        }
+
+        // Handle Enter key for code and nickname submission
+        document.getElementById('codeInput').addEventListener('keypress', function(e) {
+            if (e.key === 'Enter') {
+                submitCode();
+            }
+        });
+
+        document.getElementById('nicknameInput').addEventListener('keypress', function(e) {
+            if (e.key === 'Enter') {
+                submitCode();
+            }
+        });
+
+        // Handle Enter key for sending messages
+        document.getElementById('chatInput').addEventListener('keypress', function(e) {
+            if (e.key === 'Enter') {
+                sendMessage();
+            }
+        });
+
+        // Initialize joke on page load
         generateJoke();
     </script>
 </body>
